dashboard horizontal scroll fixed

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -582,7 +582,7 @@ csmall2 {
 
 #sidebar-wrapper {
     z-index: 1000;
-    position: fixed;
+    position: absolute;
     left: 250px;
     width: 0;
     height: 100%;
